src/components/collapsible-section/collapsible-section.scss
@import '../../style/internal/mdc-variables';

/**
 * @prop --closed-header-background-color: background color for header when closed
 * @prop --open-header-background-color: background color for header when open
 * @prop --body-background-color: background color for body
 * @prop --body-padding: padding for body
 */

:host {
    display: block;
}

:host([hidden]) {
    display: none;
}

:host([disabled]) {
    pointer-events: none;
}

.section__header {
    transition: background-color 0.2s ease;
    cursor: pointer;

    align-items: center;
    display: flex;
    justify-content: space-between;

    padding-left: pxToRem(10);
    padding-right: pxToRem(10);
    height: pxToRem(60);

    background-color: var(--closed-header-background-color, #ffffff);
    section.open & {
        background-color: var(--open-header-background-color, #f8f8f8);
    }
    &:hover {
        background-color: var(--open-header-background-color, #f8f8f8);
    }
}

.section__header__title {
    flex-grow: 1;
}

.section__body {
    background-color: var(--body-background-color, #ffffff);
    padding: var(--body-padding, 0);

    display: none;
    section.open & {
        display: block;
    }

    &:before,
    &:after {
        content: ' ';
        display: table;
    }

    &:after {
        clear: both;
    }
}

@import './partial-styles/expand-icon.scss';

